# text-video-annotator

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LEARNED_SELECTOR_PLAN.md  NEXT_STEPS.md  README.md  TEMPORAL_MULTI_OBJECT_PLAN.md  pyproject.toml
scripts/: __init__.py  download_lvis_subset.py  evaluate_candidate_recall.py  evaluate_lvis_subset.py  evaluate_lvvis_subset.py  evaluate_mevis_subset.py  evaluate_refdavis_subset.py  generate_mevis_caches.py  merge_mevis_ab.py  prepare_dataset.py  prepare_mevis_diagnostic.py  prepare_mevis_manifest.py  prepare_refdavis_manifest.py  prepare_refytvos_manifest.py  prepare_selector_dataset.py  prepare_video_manifest.py  smoke_test_models.py  smoke_test_video.py  train_selector.py  write_mevis_identity.py
tests/: test_candidate_recall.py  test_category_union_acceptance.py  test_core.py  test_detector_postprocess.py  test_generate_mevis_caches.py  test_learned_selector.py  test_lvis_eval.py  test_mevis_diagnostic.py  test_mevis_identity.py  test_mevis_manifest.py  test_motion.py  test_pipeline_cache.py  test_prepare_selector_dataset.py  test_prompts.py  test_redetection.py  test_refdavis_manifest.py  test_refytvos_manifest.py  test_selector_data.py  test_semantic_encoder.py  test_track_cache.py  test_track_features.py  test_track_manager.py  test_video_manifest.py  test_video_metrics.py
video_annotator/: __init__.py  cli.py  config.py  detector.py  exporters.py  identity.py  learned_selector.py  motion.py  pipeline.py  prompts.py  referring.py  render.py  selector_data.py  semantic_encoder.py  track_cache.py  track_features.py  (+4 more)
