[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-video-annotator"
version = "0.1.0"
description = "Offline open-vocabulary image and video annotation with Grounding DINO and SAM 2"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=9.4",
  "opencv-python-headless>=4.8",
  "typer>=0.12",
]

[project.optional-dependencies]
models = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "transformers>=4.45",
  "huggingface-hub>=0.25",
  "accelerate>=0.34",
  "safetensors>=0.4",
  "pycocotools>=2.0.8",
]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
video-annotator = "video_annotator.cli:app"

[tool.setuptools.packages.find]
include = ["video_annotator*"]
